add supporting of HEAD http method
